--- a/RESUME_BUILDER/static_resume/index.html
+++ b/RESUME_BUILDER/static_resume/index.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Resume</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Resume Builder</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
     <header>
-      <h1>Mariyam Mahnoor</h1>
-      <p>Email: mariyamahnoor@example.com | Phone: +1234567890</p>
+      <h1>Resume Builder</h1>
+      <p>Fill in your details to generate a resume</p>
     </header>
 
-    <section id="personal-info">
-      <h2>
-        Personal Info
-        <button onclick="toggleVisibility('personal-info')">Toggle</button>
-      </h2>
-      <div>
-        <p>Address: 123 Main Street, karachi , Pakistan</p>
-       
-      </div>
+    <!-- Resume Form -->
+    <section id="form-section">
+      <form id="resume-form">
+        <h2>Personal Info</h2>
+        <label for="name">Full Name</label>
+        <input type="text" id="name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
+
+        <label for="phone">Phone</label>
+        <input type="tel" id="phone" required>
+
+        <h2>Education</h2>
+        <label for="degree">Degree</label>
+        <input type="text" id="degree" required>
+
+        <label for="institution">Institution</label>
+        <input type="text" id="institution" required>
+
+        <label for="year">Year</label>
+        <input type="text" id="year" required>
+
+        <h2>Work Experience</h2>
+        <label for="position">Position</label>
+        <input type="text" id="position" required>
+
+        <label for="company">Company</label>
+        <input type="text" id="company" required>
+
+        <label for="work-years">Years</label>
+        <input type="text" id="work-years" required>
+
+        <h2>Skills</h2>
+        <label for="skills">Skills (comma-separated)</label>
+        <input type="text" id="skills" required>
+
+        <button type="submit" class="submit-btn">Generate Resume</button>
+      </form>
     </section>
 
-    <section id="education">
-      <h2>
-        Education
-        <button onclick="toggleVisibility('education')">Toggle</button>
-      </h2>
-      <ul>
-        <li>B.E in Electronics, NED University (2015 - 2019)</li>
-        <li>Resercher , NED University (2020 - 2022)</li>
-      </ul>
+    <!-- Dynamically Generated Resume -->
+    <section id="resume-section" class="hidden">
+      <h2>Generated Resume</h2>
+      <div id="resume-content"></div>
     </section>
+  </div>
 
-    <section id="skills">
-      <h2>
-        Skills <button onclick="toggleVisibility('skills')">Toggle</button>
-      </h2>
-      <ul></ul>
-    </section>
-
-    <section id="work-experience">
-      <h2>
-        Work Experience
-        <button onclick="toggleVisibility('work-experience')">Toggle</button>
-      </h2>
-      <ul>
-        <li>Software Developer, NCL (2020 - Present)</li>
-        <li>Intern, civil avaition (2019 - 2020)</li>
-      </ul>
-    </section>
-
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
